# pos

./: .gitignore  main.py  pyproject.toml
src/components/: datagrid.py  dialog.py
src/controllers/: buy.py  product.py  user.py
src/models/: __init__.py  buy.py  buydetail.py  database.py  product.py  sell.py  selldetail.py  user.py
src/views/: qlogin.py  qmenu.py  qproduct.py
